--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -24,11 +24,15 @@ jobs:
       - name: Log in to Docker Hub
         run: echo "${DOCKERHUB_PASSWORD}" | docker login -u "${DOCKERHUB_USERNAME}" --password-stdin
 
+      - name: Extract short SHA
+        id: extract_sha
+        run: echo "SHORT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+
       - name: Build Docker image
-        run: docker build -t $DOCKERHUB_USERNAME/microservice1:latest .
+        run: docker build -t $DOCKERHUB_USERNAME/microservice1:${SHORT_SHA} .
 
       - name: Push Docker image
-        run: docker push $DOCKERHUB_USERNAME/microservice1:latest
+        run: docker push $DOCKERHUB_USERNAME/microservice1:${SHORT_SHA}
 
   build-consumer:
     name: Build and Push Consumer
@@ -45,7 +49,7 @@ jobs:
         run: echo "${DOCKERHUB_PASSWORD}" | docker login -u "${DOCKERHUB_USERNAME}" --password-stdin
 
       - name: Build Docker image
-        run: docker build -t $DOCKERHUB_USERNAME/microservice2:latest .
+        run: docker build -t $DOCKERHUB_USERNAME/microservice2:${SHORT_SHA} .
 
       - name: Push Docker image
-        run: docker push $DOCKERHUB_USERNAME/microservice2:latest
+        run: docker push $DOCKERHUB_USERNAME/microservice2:${SHORT_SHA}
