--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Run Producer Unit Tests
+      - name: Run Consumer Unit Tests
         run: |
           python -m unittest discover tests/
 
