--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -21,6 +21,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+ 
+      - name: Install Producer dependencies
+        run: pip install -r requirements.txt
 
       - name: Run Producer Unit Tests
         run: |
