--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,21 +41,21 @@ jobs:
           sed -i "s|\(image = \\\".*/microservice2:\).*\\\"|\1${SHORT_SHA}\\\"|" main.tf
 
 
-      - name: Terraform Init with backend config
-        run: |
-          terraform init \
-            -backend-config="bucket=${{ secrets.TF_STATE_BUCKET_NAME }}" \
-            -backend-config="key=terraform.tfstate" \
-            -backend-config="region=us-west-1" \
-            -backend-config="dynamodb_table=${{ secrets.TF_LOCK_TABLE_NAME }}" \
-            -backend-config="encrypt=true"
+      # - name: Terraform Init with backend config
+      #   run: |
+      #     terraform init \
+      #       -backend-config="bucket=${{ secrets.TF_STATE_BUCKET_NAME }}" \
+      #       -backend-config="key=terraform.tfstate" \
+      #       -backend-config="region=us-west-1" \
+      #       -backend-config="dynamodb_table=${{ secrets.TF_LOCK_TABLE_NAME }}" \
+      #       -backend-config="encrypt=true"
 
-      - name: Terraform Plan
-        run: terraform plan
+      # - name: Terraform Plan
+      #   run: terraform plan
 
-      - name: Terraform Apply
-        run: terraform apply -auto-approve
+      # - name: Terraform Apply
+      #   run: terraform apply -auto-approve
 
-      # - name: Terraform Destroy
-      #   run: terraform destroy
+      - name: Terraform Destroy
+        run: terraform destroy
       
