--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,6 +56,8 @@ jobs:
       # - name: Terraform Apply
       #   run: terraform apply -auto-approve
 
-      - name: Terraform Destroy
+      - name: Terraform plan Destroy
         run: terraform plan -destroy
-      
+
+      - name: Terraform Destroy
+        run: terraform destroy
