--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
           sed -i "s|\(image = \\\".*/microservice2:\).*\\\"|\1${SHORT_SHA}\\\"|" main.tf
 
 
-      - name: Terraform Init with backend config
+- name: Terraform Init with backend config
         run: |
           terraform init \
             -backend-config="bucket=${{ secrets.TF_STATE_BUCKET_NAME }}" \
@@ -50,9 +50,19 @@ jobs:
             -backend-config="dynamodb_table=${{ secrets.TF_LOCK_TABLE_NAME }}" \
             -backend-config="encrypt=true"
 
+      # --- STEP TO FORCE UNLOCK ---
+      - name: Attempt to Force Unlock Terraform State
+        # This step is added to try and clear a stale lock before proceeding.
+        # It's set to continue on error so the main plan/destroy can still attempt to run.
+        # REPLACE 'f7d9ab11-4a1c-e2b7-922d-a2d0d41c9719d' with the *actual* lock ID from any future error,
+        # if it changes.
+        run: |
+          echo "Attempting to force unlock Terraform state..."
+          terraform force-unlock f7d9ab11-4a1c-e2b7-922d-a2d0d41c9719d || true
+      # --- END FORCE UNLOCK STEP ---
+
       # - name: Terraform Plan
       #   run: terraform plan
-
       # - name: Terraform Apply
       #   run: terraform apply -auto-approve
 
