--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Terraform Apply
         run: terraform apply -auto-approve
 
-      - name: Terraform des
-        run: terraform destroy -auto-approve
+      # - name: Terraform des
+      #   run: terraform destroy -auto-approve
 
         
